# api/swagger/swagger.yaml
@@ -102,6 +102,88 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+          
+  /network:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: network
+    x-a127-apply: {}
+    get:
+      description: Returns bitrates by session
+      # used as the method name of the controller
+      operationId: getNetworkItems
+      parameters:
+        - name: session_id
+          in: query
+          description: session_id to get list of bitrates for
+          required: true
+          type: string
+        - name: user_id
+          in: query
+          description: user_id to get list of bitrates for
+          required: false
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+            # a pointer to a definition
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /network/upload:
+    x-swagger-router-controller: network
+    x-a127-apply: {}
+    post:
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: putUploadNewtorkItem
+      parameters:
+        - name: name
+          in: body
+          description: Desc
+          required: false
+          schema:
+            type: string
+      responses:
+        "201":
+          description: Created
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /network/download:
+    x-swagger-router-controller: network
+    x-a127-apply: {}
+    post:
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: putDownloadNetworkItem
+      parameters:
+        - name: name
+          in: body
+          description: Desc
+          required: false
+          schema:
+            type: string
+      responses:
+        "201":
+          description: Created
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"          
+            
   /events:
     # binds a127 app logic to a route
     x-swagger-router-controller: events
